[tool.poetry]
name = "pulp-learn"
version = "0.1.0"
description = ""
authors = ["xiushu53 <xiushu53@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
jupyter = "^1.0.0"
numpy = "^1.21.3"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
PuLP = "^2.5.1"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.11.2"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
